--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                 <h3 class="project-list-h3">Назва проекту - Фільми</h3>
                <p class="project-list-p-opis">
       Опис: 
-      <a href="https://ljresetl.github.io/kino2/" target="_blank" class="container-section-four-figma"><span class="container-section-four-figma-www">сайт з адаптивною версткою</span></a> з макету Figma
+      <a href="https://ljresetl.github.io/kino2/" target="_blank" class="container-section-four-figma"><span class="container-section-four-figma-www">->>сайт з адаптивною версткою</span></a> з макету Figma
       та посиланням на сам макет: - Зроблено без макету!
       <!-- <a href="https://www.figma.com/design/KBK97RnaJsjnIkg8NcIBqy/%D0%92%D1%96%D1%82%D0%B0%D0%BB%D1%96%D0%B9-%D0%91%D0%B0%D1%80%D0%B0%D0%BD%D0%BE%D0%B2?node-id=0-3&t=lC3lgO9pHupS6FTx-0">макет Figma</span></a>. -->
     </p>
@@ -331,7 +331,7 @@
                 <h3 class="project-list-h3">Назва проекту - Neway-Grup</h3>
                <p class="project-list-p-opis">
       Опис: 
-      <a href="https://ljresetl.github.io/Neway-Grup/" target="_blank" class="container-section-four-figma"><span class="container-section-four-figma-www">сайт з адаптивною версткою</span></a> з макету Figma
+      <a href="https://ljresetl.github.io/Neway-Grup/" target="_blank" class="container-section-four-figma"><span class="container-section-four-figma-www">->>сайт з адаптивною версткою</span></a> з макету Figma
       та посиланням на сам макет: 
       <a href="https://www.figma.com/design/KBK97RnaJsjnIkg8NcIBqy/%D0%92%D1%96%D1%82%D0%B0%D0%BB%D1%96%D0%B9-%D0%91%D0%B0%D1%80%D0%B0%D0%BD%D0%BE%D0%B2?node-id=0-3&t=lC3lgO9pHupS6FTx-0">макет Figma</span></a>.
     </p>
@@ -360,7 +360,7 @@
                   <h3 class="project-list-h3">Назва проекту - Барбершоп</h3>
                  <p class="project-list-p-opis">
         Опис: 
-        <a href="https://ljresetl.github.io/barbershop/" target="_blank" class="container-section-four-figma"><span class="container-section-four-figma-www">сайт з адаптивною версткою</span></a> з макету Figma
+        <a href="https://ljresetl.github.io/barbershop/" target="_blank" class="container-section-four-figma"><span class="container-section-four-figma-www">->>сайт з адаптивною версткою</span></a> з макету Figma
         та посиланням на сам макет: 
         <a href="https://www.figma.com/design/8rFYb4fnrKQ9oa6EWtZx30/Landing-page---%D0%91%D0%B0%D1%80%D0%B1%D0%B5%D1%80%D1%88%D0%BE%D0%BF--Copy-?node-id=1374-32&t=gtAhvALMimzaZmga-0">макет Figma</span></a>.
       </p>
@@ -390,7 +390,7 @@
               <h3 class="project-list-h3">Назва проекту - PRODUCT</h3>
              <p class="project-list-p-opis">
     Опис: 
-    <a href="https://ljresetl.github.io/PRODUCT-business/" target="_blank" class="container-section-four-figma"><span class="container-section-four-figma-www">сайт з адаптивною версткою</span></a> з макету Figma
+    <a href="https://ljresetl.github.io/PRODUCT-business/" target="_blank" class="container-section-four-figma"><span class="container-section-four-figma-www">->>сайт з адаптивною версткою</span></a> з макету Figma
     та посиланням на сам макет: 
     <a href="https://www.figma.com/design/CCjccFZI3jmjWZXlj1L3FL/Business-promotion--practice---Copy-?node-id=0-1&p=f&t=JOs5gpU9hrLargYf-0" target="_blank" class="maket-figma"> <span class="container-section-four-figma-www">макет Figma</span></a>.
   </p>
@@ -419,7 +419,7 @@
                 <h3 class="project-list-h3">Назва проекту - Webstudio</h3>
                <p class="project-list-p-opis">
       Опис: 
-      <a href="https://ljresetl.github.io/goit-markup-hw-06/" target="_blank" class="container-section-four-figma"><span class="container-section-four-figma-www">сайт з адаптивною версткою</span></a> з макету Figma
+      <a href="https://ljresetl.github.io/goit-markup-hw-06/" target="_blank" class="container-section-four-figma"><span class="container-section-four-figma-www">->>сайт з адаптивною версткою</span></a> з макету Figma
       та посиланням на сам макет: 
       <a href="https://www.figma.com/design/TYcWnjByTKMtcC1L8jxqL7/Web-Studio--Version-5.0---Copy-?node-id=297046-1554&p=f&t=z4o51AcTlESc5X8L-0" target="_blank" class="maket-figma"> <span class="container-section-four-figma-www">макет Figma</span></a>.
     </p>
@@ -447,7 +447,7 @@
                 <h3 class="project-list-h3">Назва проекту - yachtjet</h3>
                <p class="project-list-p-opis">
       Опис: 
-      <a href="https://ljresetl.github.io/team-work-yachtjet/" target="_blank" class="container-section-four-figma"><span class="container-section-four-figma-www">сайт з адаптивною версткою</span></a> з макету Figma
+      <a href="https://ljresetl.github.io/team-work-yachtjet/" target="_blank" class="container-section-four-figma"><span class="container-section-four-figma-www">->>сайт з адаптивною версткою</span></a> з макету Figma
       та посиланням на сам макет: 
       <a href="https://www.figma.com/design/00GIbmWDVxCswcbP7nz0VE/YachtJet--Copy-?node-id=0-1&p=f&t=hRAGDTsc9DN3XSdd-0" target="_blank" class="maket-figma"> <span class="container-section-four-figma-www">макет Figma</span></a>.
     </p>
